# gistr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/terminal/: input.rs  mod.rs  password.rs  select.rs
