[package]
name = "gistr"
version = "0.1.0"
authors = ["Alican Erdogan <aerdogan07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
indicatif = "0.11.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
dialoguer = "0.4.0"
regex = "1.1.6"
serde = "1.0.104"
serde_derive = "1.0.104"
console = "0.9.1"
dirs = "2.0.2"

[profile.release]
lto = true # Link Time Optimization
opt-level = 'z' # Optimize for size.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization

# Don't forget to strip symbol info: strip target/release/gistr
